children spacing fix

--- a/src/components/comment-section/Comment.css
+++ b/src/components/comment-section/Comment.css
@@ -8,6 +8,10 @@
 	background-color: var(--white);
 }
 
+.Comment > *:not(:last-child) {
+	margin-bottom: 15px;
+}
+
 .Comment .Comment__strip {
 	display: flex;
 	align-items: center;
